################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier.barvaux@toulouse.viveris.com>
#	Description: create the ROHC common, compression and decompression libraries
################################################################################

SUBDIRS = \
	. \
	common \
	comp \
	decomp

EXTRA_DIST = \
	dllexport.h

