################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier.barvaux@toulouse.viveris.com>
#	             Didier Barvaux <didier@barvaux.org>
#	Description: create and run the automated tests located in subdirectories
################################################################################

SUBDIRS = \
	functional \
	robustness \
	non_regression

EXTRA_DIST = \
	test.h \
	valgrind.sh \
	valgrind.xsl

