################################################################################
#	Name       : Makefile
#	Author     : Didier Barvaux <didier@barvaux.org>
#	Description: ensure that contrib/ content is embedded in dist archives
################################################################################

EXTRA_DIST = \
	rohc_helpers.h \
	rohc_helpers2.h \
	rohc.i \
	RohcCompressor.py \
	RohcDecompressor.py \
	setup.py \
	pcap.py \
	test_non_regression.py \
	example.py \
	buildbot.sh \
	coverage.sh

